force-app/main/default/objects/Matrix_Scoreboard_Settings__c/Matrix_Scoreboard_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Matrix &amp; Scoreboard Settings</label>
</CustomObject>