force-app/main/default/objects/Matrix_Scoreboard_Settings__c/fields/Capture_Tooltip__c.field-meta.xml
<CustomField>
    <fullName>Capture_Tooltip__c</fullName>
    <label>Capture Tooltip</label>
    <type>TextArea</type>
</CustomField>