force-app/main/default/objects/Matrix_Scoreboard_Settings__c/fields/Centralized_IDN_Tooltip__c.field-meta.xml
<CustomField>
    <fullName>Centralized_IDN_Tooltip__c</fullName>
    <label>Centralized IDN Tooltip</label>
    <type>TextArea</type>
</CustomField>