force-app/main/default/objects/Matrix_Scoreboard_Settings__c/fields/Defend_Tooltip__c.field-meta.xml
<CustomField>
    <fullName>Defend_Tooltip__c</fullName>
    <label>Defend Tooltip</label>
    <type>TextArea</type>
</CustomField>