force-app/main/default/objects/Matrix_Scoreboard_Settings__c/fields/General_Description_Text__c.field-meta.xml
<CustomField>
    <fullName>General_Description_Text__c</fullName>
    <label>Account Matrix General Description Text</label>
    <type>TextArea</type>
</CustomField>