force-app/main/default/objects/Matrix_Scoreboard_Settings__c/fields/High_Priority_Tooltip__c.field-meta.xml
<CustomField>
    <fullName>High_Priority_Tooltip__c</fullName>
    <label>High Priority Tooltip</label>
    <type>TextArea</type>
</CustomField>