force-app/main/default/objects/Matrix_Scoreboard_Settings__c/fields/Invoiced_Tooltip__c.field-meta.xml
<CustomField>
    <fullName>Invoiced_Tooltip__c</fullName>
    <label>Invoiced Tooltip</label>
    <type>TextArea</type>
</CustomField>