force-app/main/default/objects/Matrix_Scoreboard_Settings__c/fields/Low_Acuity_Tooltip__c.field-meta.xml
<CustomField>
    <fullName>Low_Acuity_Tooltip__c</fullName>
    <label>Low Acuity Tooltip</label>
    <type>TextArea</type>
</CustomField>