force-app/main/default/objects/Matrix_Scoreboard_Settings__c/fields/No_Data_Text__c.field-meta.xml
<CustomField>
    <fullName>No_Data_Text__c</fullName>
    <label>No Accounts Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>