force-app/main/default/objects/Matrix_Scoreboard_Settings__c/fields/No_Matrix_Text__c.field-meta.xml
<CustomField>
    <fullName>No_Matrix_Text__c</fullName>
    <description>Show this text in place of the matrix when the role/employee filters have not been selected yet. (i.e. &quot;Select a Role and Employee to view the Account Matrix.&quot;)</description>
    <label>No Matrix Text</label>
    <type>TextArea</type>
</CustomField>