force-app/main/default/objects/Matrix_Scoreboard_Settings__c/fields/Open_Shipped_Tooltip__c.field-meta.xml
<CustomField>
    <fullName>Open_Shipped_Tooltip__c</fullName>
    <label>Open Shipped Tooltip</label>
    <type>TextArea</type>
</CustomField>