force-app/main/default/objects/Matrix_Scoreboard_Settings__c/fields/Opp_General_Description_Text__c.field-meta.xml
<CustomField>
    <fullName>Opp_General_Description_Text__c</fullName>
    <label>Opportunity Matrix General Description</label>
    <type>TextArea</type>
</CustomField>