force-app/main/default/objects/Matrix_Scoreboard_Settings__c/fields/Opportunity_Funnel_Tooltip__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Funnel_Tooltip__c</fullName>
    <label>Opportunity Funnel Tooltip</label>
    <type>TextArea</type>
</CustomField>