force-app/main/default/objects/Matrix_Scoreboard_Settings__c/fields/Opps_No_Data_Text__c.field-meta.xml
<CustomField>
    <fullName>Opps_No_Data_Text__c</fullName>
    <label>No Opportunities Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>