force-app/main/default/objects/Matrix_Scoreboard_Settings__c/fields/Over_Under_Quota_Tooltip__c.field-meta.xml
<CustomField>
    <fullName>Over_Under_Quota_Tooltip__c</fullName>
    <label>Over Under Quota Tooltip</label>
    <type>TextArea</type>
</CustomField>