force-app/main/default/objects/Matrix_Scoreboard_Settings__c/fields/Pending_Tooltip__c.field-meta.xml
<CustomField>
    <fullName>Pending_Tooltip__c</fullName>
    <label>Pending Tooltip</label>
    <type>TextArea</type>
</CustomField>