force-app/main/default/objects/Matrix_Scoreboard_Settings__c/fields/Percent_to_Quota_Tooltip__c.field-meta.xml
<CustomField>
    <fullName>Percent_to_Quota_Tooltip__c</fullName>
    <label>Percent to Quota Tooltip</label>
    <type>TextArea</type>
</CustomField>