force-app/main/default/objects/Matrix_Scoreboard_Settings__c/fields/Performance_Scoreboard_General_Text__c.field-meta.xml
<CustomField>
    <fullName>Performance_Scoreboard_General_Text__c</fullName>
    <label>Performance Scoreboard General Text</label>
    <type>TextArea</type>
</CustomField>