force-app/main/default/objects/Matrix_Scoreboard_Settings__c/fields/Quota_Tooltip__c.field-meta.xml
<CustomField>
    <fullName>Quota_Tooltip__c</fullName>
    <label>Quota Tooltip</label>
    <type>TextArea</type>
</CustomField>